<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_column="1"
        android:layout_gravity="top"
        android:layout_row="0"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_row="4"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/noOfPeople"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_gravity="left|top"
        android:layout_marginTop="25dp"
        android:labelFor="@+id/noOfPeopleEditText"
        android:text="@string/noOfPeople"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:id="@+id/numberOfPeopleLayout"
        android:layout_row="2"
        android:columnCount="3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/noOfPersonTextView"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_marginTop="25dp"
            android:layout_row="0" />

        <EditText
            android:id="@+id/noOfPeopleEditText"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_marginTop="25dp"
            android:layout_row="0"
            android:inputType="number" />

        <Space
            android:layout_column="2"
            android:layout_gravity="fill_vertical"
            android:layout_row="1" />

    </GridLayout>

    <TextView
        android:id="@+id/amountPerPersonTextView"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_gravity="left"
        android:text="@string/amountPrPerson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" >

        <TextView
            android:id="@+id/amountPerPerson15TextView"
            android:layout_width="100dp"
            android:layout_gravity="left"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/amountPerPersonCustomTextView"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_orange_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>

<CheckBox
    android:id="@+id/tax"
    android:layout_width="74dp"
    android:layout_column="1"
    android:layout_gravity="left|center_vertical"
    android:layout_row="21"
    android:text="@string/tax" />

</GridLayout>